# misis2023f-22-3-tukhbatulin-a-a

./: CMakeLists.txt  codeforces.id  codeforces.id.txt  readme.md  status.md
digipaper/: CMakeLists.txt
digipaper/points/: CMakeLists.txt  points.cpp  trr.txt
docs/: report.md
prj.codeforces/: 0828c.cpp  1512c.cpp  1733c.cpp  1859b.cpp  1859e.cpp  1863b.cpp  1878b.cpp  1891c.cpp  1904a.cpp  1904b.cpp  1904c.cpp  1909a.cpp  1909b.cpp  1909с.cpp  1913a.cpp  1913b.cpp  1913c.cpp  1914a.cpp  1914b.cpp  1914c.cpp  CMakeLists.txt
prj.cw/: CMakeLists.txt
prj.cw/points/: CMakeLists.txt  output.txt  points.cpp
