
add_executable(0828c 0828c.cpp)
add_executable(1512c 1512c.cpp)
add_executable(1733c 1733c.cpp)
add_executable(1859b 1859b.cpp)
add_executable(1859e 1859e.cpp)
add_executable(1863b 1863b.cpp)
add_executable(1878b 1878b.cpp)
add_executable(1891c 1891c.cpp)
add_executable(1904a 1904a.cpp)
add_executable(1904b 1904b.cpp)
add_executable(1904c 1904c.cpp)
add_executable(1909a 1909a.cpp)
add_executable(1909b 1909b.cpp)
add_executable(1913a 1913a.cpp)
add_executable(1913b 1913b.cpp)
add_executable(1913c 1913c.cpp)
add_executable(1914a 1914a.cpp)
add_executable(1914b 1914b.cpp)
add_executable(1914c 1914c.cpp)
